# SII_diagnognostics

./: CMakeLists.txt  SII_Medical_DB.accdb  SII_Medical_DB.laccdb  attribute_editor.cpp  attribute_editor.h  attribute_editor.ui  attribute_normal_values.cpp  attribute_normal_values.h  attribute_normal_values.ui  attribute_possible_values.cpp  attribute_possible_values.h  attribute_possible_values.ui  classifier_attr.cpp  classifier_attr.h  classifier_attr.ui  classifier_result.cpp  classifier_result.h  classifier_result.ui  classifier_values.cpp  classifier_values.h  classifier_values.ui  clinical_picture.cpp  clinical_picture.h  clinical_picture.ui  completeness_check.cpp  completeness_check.h  completeness_check.ui  decode.bat  disease_description.cpp  disease_description.h  disease_description.ui  disease_editor.cpp  disease_editor.h  disease_editor.ui  edit_dialog.cpp  edit_dialog.h  edit_dialog.ui  knowledge_editor.cpp  knowledge_editor.h  knowledge_editor.ui  (+7 more)
